--- a/src/css/font.css
+++ b/src/css/font.css
@@ -11,6 +11,10 @@ h1 {
   font-family: "Georgia", serif !important;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 @media screen and (min-width: 1366px) {
   html {
     font-size: 16px;
